static/style.css
/******************************************************************************\
  Framework
\******************************************************************************/

body > .navbar {
  margin-bottom: 1rem;
}

.btn-group {
  display: inline-flex;
}

table td {
  white-space: nowrap;
}

.twitter-typeahead,
.bootstrap-tagsinput {
  display: block !important;
}



/******************************************************************************\
  Badge Editor
\******************************************************************************/

.focusIn {
  animation-name: focusIn;
  animation-duration: 0.5s;
  transform: translateZ( 0 );
}

.hidden {
  display: none;
  visibility: hidden;
}

#badge {
  opacity: 0;
}

#codeRed {
  fill: red;
}

#laurel {
  fill: #a80;
}





/******************************************************************************\
  Registration
\******************************************************************************/

.dropdown-item.highlight {
  background-color: #f5f5f5;
  color: #2b2d2f;
  text-decoration: none;
}





/******************************************************************************\
  Welcome
\******************************************************************************/

table th:nth-child(1) {
  width: 15%;
}

table th:nth-child(2) {
  width: 15%;
}

table th:nth-child(3) {
  width: 20%;
}

table th:nth-child(4) {
  width: 50%;
}





/******************************************************************************\
  Animations
\******************************************************************************/

@keyframes focusIn {
  0% {
    -webkit-filter: blur( 10px );
    opacity: 0;
  }

  100% {
    -webkit-filter: blur( 0 );
    opacity: 1;
  }
}

.tt-query {
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
}

.tt-hint {
  color: #999
}

.tt-menu {    /* used to be tt-dropdown-menu in older versions */
  width: 422px;
  margin-top: 4px;
  padding: 4px 0;
  background-color: #fff;
  border: 1px solid #ccc;
  border: 1px solid rgba(0, 0, 0, 0.2);
  -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
          border-radius: 4px;
  -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
     -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
          box-shadow: 0 5px 10px rgba(0,0,0,.2);
}

.tt-suggestion {
  padding: 3px 20px;
  line-height: 24px;
}

.tt-suggestion.tt-cursor,.tt-suggestion:hover {
  color: #fff;
  background-color: #0097cf;

}

.tt-suggestion p {
  margin: 0;
}

